--- a/Galgenmaennchen/Galgenmaennchen.csproj
+++ b/Galgenmaennchen/Galgenmaennchen.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MySql.Data %282%29">
-      <HintPath>..\..\..\..\Downloads\MySql.Data (2).dll</HintPath>
+      <HintPath>..\..\..\MySql.Data (2).dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -49,6 +49,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GUI_Controller\GameController.cs" />
+    <Compile Include="GUI_Controller\LeaderBoardController.cs" />
+    <Compile Include="GUI_Controller\RatingController.cs" />
+    <Compile Include="GUI_Controller\UserController.cs" />
     <Compile Include="MySqlConnector.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -56,8 +60,15 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Objects\Rating.cs" />
+    <Compile Include="Objects\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\DBAdapter.cs" />
+    <Compile Include="Service\GameAdapter.cs" />
+    <Compile Include="Service\LeaderBoardAdapter.cs" />
+    <Compile Include="Service\RatingAdapter.cs" />
+    <Compile Include="Service\UserAdapter.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
